--- a/tokenizer.ipynb
+++ b/tokenizer.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "Smaller part of the Big OpenwebText dataset.\n",
     "Dataset(stas/openwebtext-10k): https://huggingface.co/datasets/stas/openwebtext-10k \n",
-    "- Openweb text is a pensource \n",
+    "- Openweb text is a opensource text data collection.\n",
     "- This is a small dataset of 15MB compressed and 50MB uncompressed"
    ]
   },
